# cmps1131

./: .gitignore  CMakeLists.txt  README.md
exam/: circle.cpp
final-exam/: circle.h  main.cpp  sum_from_to.cpp
practice/basics/area-peri-sq/: main.cpp
practice/basics/area-rec/: main.cpp
practice/basics/area-sq/: main.cpp
practice/basics/area-tri/: main.cpp
practice/basics/avg-3nums/: main.cpp
practice/basics/f-to-c/: main.cpp
practice/basics/first-prog/: main.cpp
practice/basics/grade-letter/: main.cpp
practice/basics/grade-pf/: main.cpp
practice/basics/greatest-2nums/: main.cpp
practice/basics/odd-even/: main.cpp
practice/basics/simple-interest/: main.cpp
practice/basics/sum-2nums/: main.cpp
practice/basics/swap-2nums/: main.cpp
practice/classes/appt-class/: appointment.cpp  appointment.h  main.cpp
practice/classes/classes-review/: Point.cpp  Point.h  main.cpp
practice/classes/employee-class/: employee.cpp  employee.h  main.cpp
practice/classes/invoice-class/: invoice.cpp  invoice.h  main.cpp
practice/classes/student-class/: Student.cpp  Student.h  main.cpp
practice/for-loops/class-stats2/: main.cpp
practice/for-loops/for-loop-practice/: main.cpp
practice/for-loops/star-pattern/: main.cpp
practice/functions/exponent-fxn/: main.cpp
practice/functions/functions-practice/: main.cpp
practice/functions/lettergrade-fxn/: main.cpp
practice/functions/oddeven-fxn/: main.cpp
practice/functions/salary-calculator/: main.cpp
practice/functions/sales-commission-calc/: main.cpp
practice/functions/triplenum-fxn/: main.cpp
prog-sets/progset-1/: Converter.cpp  Converter.h  Student.cpp  Student.h  main.cpp
prog-sets/progset-2/: Miscellaneous.cpp  Miscellaneous.h  driver.cpp
quizzes/quiz-2/: daysInMonth-fxn.cpp
quizzes/quiz-3/: ATM.cpp  ATM.h  main.cpp
quizzes/quiz1/: main.cpp
tests/test-1/: Car.h  find-winner.cpp
tests/test2/: main.cpp
tests/test3/: main.cpp
(+13 files in other folders)
